--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,14 @@
 
 <style>
 
+    body {
 
+        background-image: url('bobby.jpg');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        border: none;
+
+    }
 
 </style>
 
