--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
         background-repeat: no-repeat;
         background-size: 100% 100%;
         border: none;
-
+        background-attachment: fixed;
     }
 
 </style>
