--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,6 @@
 <style>
 
     body {
-
         background-image: url('bobby.jpg');
         background-repeat: no-repeat;
         background-size: 100% 100%;
@@ -22,8 +21,9 @@
 
 
 <body>
-
-
+    <a href="https://www.youtube.com/watch?v=6rzc8pIE7E8">
+        <img src="https://tenor.com/view/lizard-dance-cute-gif-moves-gif-17583914" />
+    </a>
 
 </body>
 
