--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
 
 <body>
     <a href="https://www.youtube.com/watch?v=6rzc8pIE7E8">
-        <img src="https://tenor.com/view/lizard-dance-cute-gif-moves-gif-17583914" style="width: 100px; height: 100px"/>
+        <img src="lizard.gif" style="width: 100px; height: 100px"/>
     </a>
 
 </body>
