--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
 
 <body>
-    <a href="https://www.youtube.com/watch?v=6rzc8pIE7E8">
+    <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
         <img src="lizard.gif" style="width: 100px; height: 100px"/>
     </a>
 
