--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <style>
 
     body {
-        background-image: url('bobby.jpg');
+        background-image: url('bck.jpg');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         border: none;
@@ -18,7 +18,6 @@
     }
 
 </style>
-
 
 <body>
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
