--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
 <body>
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
-        <img src="lizard.gif" style="width: 100px; height: 100px"/>
+        <img src="lizard.gif" alt="Epicness" style="width: 100px; height: 100px"/>
     </a>
 
 </body>
