--- a/index.htm
+++ b/index.htm
@@ -17,13 +17,18 @@
         background-attachment: fixed;
     }
 
+    .Header {
+        color: deeppink;
+        text-align: center;
+        font-family: Electroharmonix;
+    }
+
 </style>
 
 <body>
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
         <img src="lizard.gif" alt="Epicness" style="width: 100px; height: 100px"/>
     </a>
-
 </body>
 
 </html>
