--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,10 @@
 </style>
 
 <body>
+    <header>
+        FREAUTnDUCHY
+    </header>
+
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
         <img src="lizard.gif" alt="Epicness" style="width: 100px; height: 100px"/>
     </a>
