--- a/index.htm
+++ b/index.htm
@@ -26,9 +26,9 @@
 </style>
 
 <body>
-    <header>
-        FREAUTnDUCHY
-    </header>
+    <div class="Header">
+        <h1>FREAUT&DUCHY</h1>
+    </div>
 
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
         <img src="lizard.gif" alt="Epicness" style="width: 100px; height: 100px"/>
