--- a/index.htm
+++ b/index.htm
@@ -17,10 +17,15 @@
         background-attachment: fixed;
     }
 
-    .Header {
+@font-face {
+    font-family: JapaneseFont;
+    src: url('Japanese.ttf')
+
+}
+        .Header {
         color: deeppink;
         text-align: center;
-        font-family: Electroharmonix;
+        font-family: JapaneseFont;
     }
 
 </style>
