--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,7 @@
 
 @font-face {
     font-family: JapaneseFont;
-    src: url('Japanese.ttf')
-
+    src: url('Japanese.ttf');
 }
         .Header {
         color: deeppink;
