--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,11 @@
 
 <style>
 
+    @font-face {
+        font-family: JapaneseFont;
+        src: url('Japanese.ttf');
+    }
+
     body {
         background-image: url('bck.jpg');
         background-repeat: no-repeat;
@@ -17,10 +22,6 @@
         background-attachment: fixed;
     }
 
-@font-face {
-    font-family: JapaneseFont;
-    src: url('Japanese.ttf');
-}
         .Header {
         color: deeppink;
         text-align: center;
@@ -31,7 +32,7 @@
 
 <body>
     <div class="Header">
-        <h1>FREAUT&DUCHY</h1>
+        <h1>freaut and duchy</h1>
     </div>
 
     <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">
