--- a/index.htm
+++ b/index.htm
@@ -25,6 +25,7 @@
         .Header {
         color: deeppink;
         text-align: center;
+        text-decoration: underline;
         font-family: JapaneseFont;
     }
 
