--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,10 @@
 </style>
 
 <body>
+    <audio src="https://www.youtube.com/watch?v=fTjm59DFifg" autoplay>
+        Error ur browser is gay
+    </audio>
+
     <div class="Header">
         <h1>freaut and duchy</h1>
     </div>
