--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -32,9 +33,6 @@
 </style>
 
 <body>
-    <audio src="https://www.youtube.com/watch?v=fTjm59DFifg" autoplay>
-        Error ur browser is gay
-    </audio>
 
     <div class="Header">
         <h1>freaut and duchy</h1>
