--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Freaut&Duchy</title>
+    <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
 
 </head>
 
