Trying to separate css into a different file

--- a/index.htm
+++ b/index.htm
@@ -2,37 +2,28 @@
 <html>
 
 <head>
-
+    <meta charset="UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
-
+    <script src="https://kit.fontawesome.com/3a0ca8394c.js"</script>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
-
-<style>
-
-    @font-face {
-        font-family: JapaneseFont;
-        src: url('Japanese.ttf');
-    }
-
-    body {
-        background-image: url('bck.jpg');
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        border: none;
-        background-attachment: fixed;
-    }
-
-        .Header {
-        color: deeppink;
-        text-align: center;
-        text-decoration: underline;
-        font-family: JapaneseFont;
-    }
-
-</style>
-
 <body>
+    <div class="wrapper">
+        <div class="sidebar"
+             <h2>Sidebar</h2> <!--main text of sidebar-->
+             <ul>
+                 <li><a href="#"><i class="fas fa-home"></i></a></li>
+                 <li><a href="#"></a></li>
+                 <li><a href="#"></a></li>
+                 <li><a href="#"></a></li>
+                 <li><a href="#"></a></li>
+                 <li><a href="#"></a></li>
+             </ul>
+    </div>
+        <div class="main_content">
+            <div class=""
+        </div>
 
     <div class="Header">
         <h1>freaut and duchy</h1>
