Finally solved the rpoblem with css

--- a/index.htm
+++ b/index.htm
@@ -2,33 +2,14 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
-    <script src="https://kit.fontawesome.com/3a0ca8394c.js"</script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="sidebar"
-             <h2>Sidebar</h2> <!--main text of sidebar-->
-             <ul>
-                 <li><a href="#"><i class="fas fa-home"></i></a></li>
-                 <li><a href="#"></a></li>
-                 <li><a href="#"></a></li>
-                 <li><a href="#"></a></li>
-                 <li><a href="#"></a></li>
-                 <li><a href="#"></a></li>
-             </ul>
-    </div>
-        <div class="main_content">
-            <div class=""
-        </div>
-
     <div class="Header">
         <h1>freaut and duchy</h1>
     </div>
-
 </body>
 
 </html>
