--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Styles/Main page/MainPageStyle.css">
 </head>
 
 <body>
