--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,24 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
     <link rel="stylesheet" href="Styles/Main page/MainPageStyle.css">
 </head>
 
 <body>
+    <div id="main-container">
+        <div id="sidebar">
+            <a href="https://discord.gg/YfRhBER">Discord</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+            <a href="#">Link 4</a>
+            <a href="#">Link 5</a>
+        </div>
+    </div>
+
     <div class="Header">
         <h1>freaut and duchy</h1>
-    </div>
+    </div>    
 </body>
 </html>
