--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
     <link rel="stylesheet" href="Styles/Main page/MainPageStyle.css">
@@ -11,15 +12,13 @@
     <div id="main-container">
         <div id="sidebar">
             <a href="https://discord.gg/YfRhBER">Discord</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <a href="https://www.youtube.com/c/freaut">Freaut's Youtube</a>
+            <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">Duchy's Youtube</a>
             <a href="#">Link 4</a>
             <a href="#">Link 5</a>
         </div>
+        <div class="Header">Freaut and Duchy</div>
     </div>
 
-    <div class="Header">
-        <h1>freaut and duchy</h1>
-    </div>    
 </body>
 </html>
