--- a/index.htm
+++ b/index.htm
@@ -15,10 +15,16 @@
             <a href="https://www.youtube.com/c/freaut">Freaut's Youtube</a>
             <a href="https://www.youtube.com/channel/UCTzGF-2xcZFAw6ebQRdPM9w">Duchy's Youtube</a>
             <a href="#">Link 4</a>
-            <a href="#">Link 5</a>
+            <a href="https://twitter.com/Duchy_12">Duchy's Twitter </a>
         </div>
         <div class="Header">Freaut and Duchy</div>
     </div>
+
+    <footer>
+        Made By: Two Epic Gamers
+        <a href="https://discord.gg/YfRhBER">Discord Link</a>
+    </footer>
+
 
 </body>
 </html>
