--- a/donations.htm
+++ b/donations.htm
@@ -1,12 +1,25 @@
-<html>
+﻿<html>
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
-    <link rel="stylesheet" href="Styles/Donations/style.css">
+    <link rel="stylesheet" href="Styles/Donations/DonoStyle.css">
 </head>
 
+<body>
+    <div>
+        <div class="Header">Plez Give Money for Bobby</div>
+    </div>
+
+    <div class="h1">Look how sad he is he is very hungry</div>
+
+
+
+    <footer>
+        Epic Give money to bobby so he can buy food
+    </footer>
+</body>
 
 
 </html>
