--- a/Bobby's Crypto/crypto.htm
+++ b/Bobby's Crypto/crypto.htm
@@ -4,14 +4,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
-    <link rel="stylesheet" href="Styles/Donations/CryptoStyle.css">
+    <link rel="stylesheet" href="Styles/Donations/Crypto/CryptoStyle.css">
 </head>
 
 <body>
-
     <div>
         <div class="Header">Bobby's donation adresses</div>
     </div>
+
+    <div>
+        <div class="h1">Btc: 1Q82ZFPRdV3SmKkk98rUqP4zvCpaFq3cWC</div>
+        <div class="h1">ETH: 0x5A86f9FbDcB3C388df6b364607FE800f1a2839AF</div>
+    </div>
+
+
 
 </body>
 
