--- a/Bobby's Crypto/crypto.htm
+++ b/Bobby's Crypto/crypto.htm
@@ -15,6 +15,8 @@
     <div>
         <div class="h1">Btc: 1Q82ZFPRdV3SmKkk98rUqP4zvCpaFq3cWC</div>
         <div class="h1">ETH: 0x5A86f9FbDcB3C388df6b364607FE800f1a2839AF</div>
+        <div class="h1">Litecoin: LLRyVPAsf2uK1WWX4ikmgCmjTjnm65CVnu</div>
+        <div class="h1">Btc Cash: qzpum4g8wse60se6kvnxu7muywndmhzttq3fqpewn3</div>
     </div>
 
 
