--- a/crypto.htm
+++ b/crypto.htm
@@ -3,14 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>WORK IN PROGRESS</title> <!--Replace with Freaut&Duchy when done-->
+    <title>Donations for bobby</title>
     <link rel="stylesheet" href="Styles/Donations/Crypto/CryptoStyle.css">
 </head>
 
 <body>
-    <div>
         <div class="Header">Bobby's donation adresses</div>
-    </div>
+    
 
     <div>
         <div class="h1">Btc: 1Q82ZFPRdV3SmKkk98rUqP4zvCpaFq3cWC</div>
